# tathya

./: .gitignore  PRD.md  Problem Statement.md  README.md  docker-compose.yml  package.json
client/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(auth)/: layout.tsx
client/src/app/(auth)/login/: page.tsx
client/src/app/(auth)/signup/: page.tsx
client/src/app/app/: page.tsx
client/src/app/app/[id]/: page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/showcase/[id]/: page.tsx
client/src/components/: dashboard-canvas.tsx  narrow-chat.tsx  navbar.tsx  ribbon-toolbar.tsx
client/src/lib/: auth-client.ts  firebase.ts  publish-api.ts  query-api.ts  upload-api.ts  user-api.ts
nginx/: tathya.obvix.cloud
server/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  seed.py
server/api/: publish.py  query.py  schema.py  upload.py  user.py
server/core/: config.py  database.py  logging_config.py  models.py  session.py
server/services/: csv_ingester.py  llm.py  query_executor.py  sqlite_executor.py
src/app/landing/: page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
